welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:16: error: '=' expected but identifier found.
def faire/(c:Color) {marquerSol(c);avance();gauche();avance();gauche();marquerSol(c);avance();gauche();avance();gauche()} 
         ^PatternPicture:18: error: illegal start of simple expression
}
^